Рефакторинг в Gradle